force-app/main/default/objects/OrderSyncEvent__e/OrderSyncEvent__e.object-meta.xml
<CustomObject>
    <label>Order Sync Event</label>
    <pluralLabel>Order Sync Events</pluralLabel>
</CustomObject>