force-app/main/default/objects/OrderSyncEvent__e/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>Total Amount</label>
    <type>Text</type>
    <length>20</length>
</CustomField>